<resources>
    <string name="app_name" translatable="false">NativeYou</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="spinner_prompt">UI Mode</string>
    <string name="global_settings">Global Settings</string>
    <string name="these_settings_are_applied_globally_and_override_app_specific_settings">These settings are used by all Web Apps, except those which explicitly override the global settings.</string>
    <string name="clear_cookies_after_usage">Clear cookies after usage</string>
    <string name="use_three_finger_swipes_to_switch_between_web_apps_experimental">Use three-finger swipes ⇄ to switch between Web Apps (experimental)</string>
...
    <string name="ssl_error_unknown_authority">The certificate authority is not trusted.</string>
    <string name="ssl_error_expired">The certificate has expired.</string>
    <string name="ssl_error_id_mismatch">The certificate does not match the host name.</string>
    <string name="ssl_error_notyetvalid">The certificate is not yet valid.</string>
    <string name="ssl_error_msg_line2">It is not recommended to load the page.</string>
    <string name="ssl_error_title">Warning: Potential security threat</string>
    <string name="load_anyway">Load anyway</string>
    <string name="no_https_dialog_title">No HTTPS encryption</string>
    <string name="no_https_dialog_accept">Allow HTTP within this Web App</string>
    <string name="no_https_dialog_msg">This page uses an unencrypted HTTP connection. Do not enter any sensible data.</string>
    <string name="allow_http">Allow HTTP</string>
    <string name="webapp_section_security">Security &amp; Privacy</string>
    <string name="webapp_section_cookies">Cookies &amp; Ads</string>
...
