...
                                android:layout_marginBottom="@dimen/remove_divider"
                                android:text="@string/webapp_section_cookies"
                                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                                android:textStyle="bold" />

                            <com.google.android.material.materialswitch.MaterialSwitch
                                android:id="@+id/switchCookies"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:checked="@={webapp.allowCookies}"
                                android:onCheckedChanged="@{(switch, checked) -> webapp.onSwitchCookiesChanged(switch, checked)}"
                                android:text="@string/accept_cookies" />

...
